# pxltr

./: .gitignore  LICENSE  README.md  cli.py  palette_swap.py  palettes.py  pyproject.toml
palettes/: amiga.yaml  apple2.yaml  atari2600.yaml  cga.yaml  commodore64.yaml  gameboy.yaml  gameboy_pocket.yaml  msx.yaml  nes.yaml  pico8.yaml  zx_spectrum.yaml
